<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_topic_do_you_love"
        android:textColor="@color/white"
        android:background="@color/blue_t"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
        android:paddingBottom="@dimen/dp_40"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_15"
        tools:ignore="RtlSymmetry" />
    <View
        android:id="@+id/barB"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_t"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:layout_above="@+id/barB"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/books"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                android:background="@drawable/blue_bg"
                android:padding="@dimen/dp_20"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/news"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/entertainment"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/technology"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                android:background="@drawable/blue_bg"
                android:padding="@dimen/dp_20"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/grammar"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/podcasts"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/business"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/sports"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                android:background="@drawable/blue_bg"
                android:padding="@dimen/dp_20"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/pronunciation"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_20"
                android:background="@drawable/blue_b"
                android:gravity="center"
                android:padding="@dimen/dp_20"
                android:text="@string/health"
                android:textColor="@color/blue_t"
                android:textSize="@dimen/sp_15" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:src="@drawable/line_"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"/>
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/whit"
        android:text="@string/continue_gor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:padding="@dimen/dp_15"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/dp_10"/>






</RelativeLayout>